@@ -2,14 +2,19 @@ Kerberos UserDirectoryProvider
 
 Changes/features:
 
+- for 2.1.x/2.2
+
+ o uses configurable, in-memory caching mechanism to alleviate load
+   on KDCs caused by WebDAV usage (slt)
+
 - for 2.1
 
  o compatible with new UserDirectoryProvider methods (core)
 
  o uses "master project descriptor file" for project.xml (core)
 
- o Can use sakai.properties settings to reduce dependency on working
+ o can use sakai.properties settings to reduce dependency on working
    systemwide Kerberos JAAS configuration (slt)
 
- o Documentation improved and moved into separate directory (slt)
+ o documentation improved and moved into separate directory (slt)
 
